--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
-        <p class="note">Pembuat: Arjuna uop mabin.</p>
+        <p class="note"></p>
     </div>
     <script src="script.js"></script>
 </body>
